--- a/12-flappy-bird.html
+++ b/12-flappy-bird.html
@@ -151,7 +151,7 @@
       display: none;
     }
     #bird {
-      background-image: url("images/bird.png");
+      background-image: url("bird.png");
       background-size: contain;
       background-repeat: no-repeat;
       height: 60px;
