Change flappy to floppy

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   </style>
 </head>
 <body>
-  <h1>flappy bird</h1>
+  <h1>floppy bird</h1>
   <div id="initial">
     <p>How to play: Use your space bar to control the bird</p>
     <button id="btnStart">Start</button>    
